# rust_etl_pipeline

./: .env  .gitignore  Cargo.toml
src/: commands.rs  main.rs  models.rs
